完成入驻歌手以及登录组件布局

--- a/src/app/pages/home/home.component.less
+++ b/src/app/pages/home/home.component.less
@@ -90,16 +90,11 @@
             overflow: hidden;
             padding-bottom: 8px;
             border-bottom: 1px solid @border-color-base;
-            b{
-              float: left;
-            }
-            span{
-              float: right;
-            }
           }
 
           .list{
             overflow: hidden;
+            float: left;
             .card{
               margin-top: 14px;
               width: 210px;
@@ -110,6 +105,10 @@
                 float: left;
                 width: 62px;
                 height: 62px;
+                img {
+                  display: block;
+                  width: 100%;
+                }
               }
               .txt{
                 float: left;
