--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,6 +37,7 @@
               class="sheet-item"
               *ngFor="let item of songSheetList"
               [sheet]="item"
+              (onPlay)="onPlaySheet($event)"
               ></app-single-sheet>
             </div>
           </div>
@@ -64,3 +65,5 @@
     </div>
   </div>
   </div>
+
+ 
