--- a/src/app/share/wy-ui/wy-player/wy-player.component.html
+++ b/src/app/share/wy-ui/wy-player/wy-player.component.html
@@ -15,15 +15,15 @@
                 <i class="mask"></i>
             </div>
             <div class="play">
-                <div class="words clearfix" [hidden]="true">
-                    <p class="ellipsis">歌名</p>
+                <div class="words clearfix hide">
+                    <p class="ellipsis margin-bottom-none">歌名</p>
                     <ul class="songs clearfix margin-bottom-none">
                         <li><a href="">歌手1</a></li>
                     </ul>
                 </div>
                 <div class="bar">
                     <div class="slider-wrap">
-                        <div>进度条</div>
+                        <app-wy-slider></app-wy-slider>
                     </div>
                     <span class="time">
                         <em>02:11</em> / 04:35
